add params to SeedAnalyzer

--- a/advent-of-code-tests/advent-of-code-tests.csproj
+++ b/advent-of-code-tests/advent-of-code-tests.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\advent-of-code\advent-of-code.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Day 5\" />
+  </ItemGroup>
+
 </Project>
